--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Online Car Dealarship</title>
+        <title>Internet-Dealers</title>
     </head>
     <body>
-        
+
     </body>
 </html>
