Done with home page HTML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,154 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Internet-Dealers</title>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <title>Internet-Dealers</title>
+</head>
+
+<body>
+    <header>
+        <img src="img/logo/website-logo.png" alt="website-logo"/>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Inventory</a></li>
+                <li><a href="#">Sell Vehicle</a></li>
+                <li><a href="#">Finace Options</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h2>We are here for your benefit.</h2>
+    <video width="900" height="500" src="videos/promo-video1.mp4" alt="car showroom promo video" controls></video>
+    <p>Here at Internet-Dealers we find the best match for your style.</p>
+    <h2>Seacrh Your Choice: </h2>
+    <form action="#.php">
+        <label for="car-make">Make: </label><input type="text" minlength="0" size="30" />
+        <label for="car-model">Mode: </label><input type="text" size="30" />
+        <label for="car-year">Year: </label><select>
+            <option value=""></option>
+            <option value="2019">2019</option>
+            <option value="2019">2018</option>
+            <option value="2019">2017</option>
+            <option value="2019">2016</option>
+            <option value="2019">2015</option>
+            <option value="2019">2014</option>
+            <option value="2019">2013</option>
+            <option value="2019">2012</option>
+            <option value="2019">2011</option>
+            <option value="2019">2010</option>
+        </select>
+        <input type="submit" value="Search" />
+    </form>
+
+    <div>
+        <h1>Here are our latest models for sale.</h1>
+        <table>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car1.png" alt="2016 Dodge Grand Carvana SE" />
+                        <figcaption>2016 Dodge Grand Carvana SE</figcaption>
+                    </figure>
+                </td>
+                <td>2016 Dodge Grand Carvana SE
+                </td>
+                <td>$15,999+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car2.png" alt="2018 Kia Optima LX" />
+                        <figcaption>2018 Kia Optima LX</figcaption>
+                    </figure>
+                </td>
+                <td>2018 Kia Optima LX</td>
+                <td>$29,999+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car3.png" alt="2016 Chevrolet Camaro LT" />
+                        <figcaption>2016 Chevrolet Camaro LT</figcaption>
+                    </figure>
+                </td>
+                <td>2016 Chevrolet Camaro LT</td>
+                <td>$23,998+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car4.png" alt="2018 Dodge Challenger" />
+                        <figcaption>2018 Dodge Challenger</figcaption>
+                    </figure>
+                </td>
+                <td>2018 Dodge Challenger</td>
+                <td>$37,998+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car5.png" alt="2014 Volkswagen Passet SE" />
+                        <figcaption>2014 Volkswagen Passet SE</figcaption>
+                    </figure>
+                </td>
+                <td>2014 Volkswagen Passet SE</td>
+                <td>$14,599+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car6.png" alt="2017 Chrysler 200 LX" />
+                        <figcaption>2017 Chrysler 200 LX</figcaption>
+                    </figure>
+                </td>
+                <td>2017 Chrysler 200 LX</td>
+                <td>$19,999+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car7.png" alt="2015 Lexus CT 200h" />
+                        <figcaption>2015 Lexus CT 200h</figcaption>
+                    </figure>
+                </td>
+                <td>2015 Lexus CT 200h</td>
+                <td>$17,998+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car8.png" alt="2018 Hyundai Accent" />
+                        <figcaption>2018 Hyundai Accent</figcaption>
+                    </figure>
+                </td>
+                <td>2018 Hyundai Accent</td>
+                <td>$13,998+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car9.png" alt="2016 Acura MDX" />
+                        <figcaption>2016 Acura MDX</figcaption>
+                    </figure>
+                </td>
+                <td>2016 Acura MDX</td>
+                <td>$27,998+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+            <tr>
+                <td>
+                    <figure><img src="img/cars/car10.png" alt="2018 Nissan Versa SV" />
+                        <figcaption>2018 Nissan Versa SV</figcaption>
+                    </figure>
+                </td>
+                <td>2018 Nissan Versa SV</td>
+                <td>$11,999+tax</td>
+                <td><button>Buy Now</button></td>
+            </tr>
+        </table>
+    </div>
+    <h1>Lets hear what our cars have to say: <audio alt="car-music" src="audio/car-music.ogg" controls></audio></h1>
+    <footer>(C) Internet-Dealers Pvt. LTD</footer>
+</body>
+
 </html>
