Redo of index.html to use css grid

--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 
 <head>
     <title>Internet-Dealers</title>
+    <link href="css/index.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
     <header>
-        <img src="img/logo/website-logo.png" alt="website-logo"/>
+        <img src="img/logo/website-logo.png" alt="website-logo" class="website-logo"/>
         <nav>
-            <ul>
+            <ul class="nav-tags">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Inventory</a></li>
                 <li><a href="#">Sell Vehicle</a></li>
-                <li><a href="#">Finace Options</a></li>
+                <li><a href="#">Finace</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
         </nav>
     </header>
-    <h2>We are here for your benefit.</h2>
+    <br/>
+    <div class="video-container">
     <video width="900" height="500" src="videos/promo-video1.mp4" alt="car showroom promo video" controls></video>
+</div>
+<div
     <p>Here at Internet-Dealers we find the best match for your style.</p>
     <h2>Seacrh Your Choice: </h2>
     <form action="#.php">
