Done With Header Contents

--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 
 <head>
     <title>Internet-Dealers</title>
-    <link href="css/index.css" rel="stylesheet" type="text/css"/>
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <header>
-        <img src="img/logo/website-logo.png" alt="website-logo" class="website-logo"/>
         <nav>
-            <ul class="nav-tags">
+            <ul class="nav-tabs">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Inventory</a></li>
                 <li><a href="#">Sell Vehicle</a></li>
                 <li><a href="#">Finace</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
+        <div class="color-filler"></div>
+        <img class="website-logo" src="img/logo/website-logo.png" />
     </header>
-    <br/>
-    <div class="video-container">
-    <video width="900" height="500" src="videos/promo-video1.mp4" alt="car showroom promo video" controls></video>
+    <div class="main-container">
+
+        <video width="900" height="500" src="videos/promo-video1.mp4" alt="car showroom promo video" controls></video>
+
+    </div>
+    <!--
+
 </div>
 <div
     <p>Here at Internet-Dealers we find the best match for your style.</p>
@@ -152,7 +157,7 @@
         </table>
     </div>
     <h1>Lets hear what our cars have to say: <audio alt="car-music" src="audio/car-music.ogg" controls></audio></h1>
-    <footer>(C) Internet-Dealers Pvt. LTD</footer>
+    <footer>(C) Internet-Dealers Pvt. LTD</footer>-->
 </body>
 
 </html>
