--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Internet-Dealers</title>
     <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -22,18 +23,206 @@
     </header>
     <div class="main-container">
         <video height="500" src="videos/promo-video1.mp4" alt="car showroom promo video" controls></video>
-            <div class="search-container">
-                <form>
-                    <label for="make">Make: </label>
-                    <input type="text" id="make"/>
-                    <label for="year">Year: </label>
-                    <input type="number" id="year"/>
-                    <label for="model">Model: </label>
-                    <input type="text" id="model"/>
-                </form>
+        <div class="search-container">
+            <h2>Search Your Choice:</h2>
+            <form>
+                <label for="make">Make: </label>
+                <select id="make">
+                    <option></option>
+                    <option>Acura</option>
+                </select>
+                <label for="year">Year: </label>
+                <input type="number" id="year" />
+                <label for="model">Model: </label>
+                <input type="text" id="model" />
+                <input type="submit" id="submit" value="Search" />
+            </form>
+        </div>
+        <div class="recent-arrivals-wrapper">
+            <center>
+                <h1>New In The Inventory</h1>
+            </center>
+            <div class="new-inventory">
+                <div class="each-cell">
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car1.png" alt="2016 Dodge Grand Carvana SE" />
+                            <center>
+                                <figcaption>2016 Dodge Grand Carvana SE</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$15,900</span>
+                            <span>102K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car2.png" alt="2018 Kia Optima LX" />
+                            <center>
+                                <figcaption>2018 Kia Optima LX</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$20,900</span>
+                            <span>60K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car3.png" alt="2016 Chevrolet Camaro LT" />
+                            <center>
+                                <figcaption>2016 Chevrolet Camaro LT</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$23,998</span>
+                            <span>20K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+                </div>
+
+                <!--Second Row-->
+
+                <div class="each-cell">
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car4.png" alt="2018 Dodge Challenger" />
+                            <center>
+                                <figcaption>2018 Dodge Challenger</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$39,998</span>
+                            <span>3K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car5.png" alt="2014 Volkswagen Passet SE" />
+                            <center>
+                                <figcaption>2014 Volkswagen Passet SE</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$5,900</span>
+                            <span>201K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car6.png" alt="2017 Chrysler 200 LX" />
+                            <center>
+                                <figcaption>2017 Chrysler 200 LX</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$19,999</span>
+                            <span>75K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+                </div>
+                <!--Third Row-->
+                <div class="each-cell">
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car7.png" alt="2015 Lexus CT 200h" />
+                            <center>
+                                <figcaption>2015 Lexus CT 200h</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$17,900</span>
+                            <span>95K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car8.png" alt="2018 Hyundai Accent" />
+                            <center>
+                                <figcaption>2018 Hyundai Accent</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$16,000</span>
+                            <span>50K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+
+                    <div class="car-cards">
+                        <figure><img src="img/cars/car9.png" alt="2016 Acura MDX" />
+                            <center>
+                                <figcaption>2016 Acura MDX</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$11,900</span>
+                            <span>135K Miles</span>
+                        </div>
+                        <center><button class="buy-now-button">Buy Now</button></center>
+
+                    </div>
+                </div>
+
             </div>
-        
+            <br>
+        </div>
+
     </div>
+
+    <footer>
+        <div class="contact-us">
+            <center>
+                <h1>Follow Us:</h1>
+                <img class="follow-us-imgs" src="img/icons/fb-ic.png" />
+                <img class="follow-us-imgs" src="img/icons/instagram-ic.png" />
+                <img class="follow-us-imgs" src="img/icons/twitter-ic.png" />
+            </center>
+        </div>
+        <div class="copyright-content">
+            <span>
+                    Internet Dealers Pvt. Ltd
+                    <br>
+                    Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.
+                    <br>
+                    Oxford, MS, USA
+                </span>
+        </div>
+        <div class="news-letter-container">
+            <span>
+                <br>
+                <h2>Sign Up For NewsLetter:</h2>
+                <br>
+                <form>
+                    <input type="text" placeholder="youremail@example.com" id="email"/>
+                    <input type="submit" id="subscribe-button" value="Subscribe"/>
+                </form>
+                
+            </span>
+        </div>
+    </footer>
 
     <!--
 
