Done with Finance and About Page, Remaining Inventory

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         <nav>
             <ul class="nav-tabs">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Inventory</a></li>
-                <li><a href="#">Sell Vehicle</a></li>
-                <li><a href="#">Finace</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="html/inventory.html">Inventory</a></li>
+                <li><a href="html/finance.html">Finance</a></li>
+                <li><a href="html/about.html">About</a></li>
             </ul>
         </nav>
         <div class="color-filler"></div>
