Done with Inventory Page

--- a/html/inventory.html
+++ b/html/inventory.html
@@ -23,8 +23,12 @@
 
     <div class="body-container">
         <div class="advanced-search-container">
-            <br><center><h2>Advance Search</h2></center>
-            <br><hr/><br><br>
+            <br>
+            <center>
+                <h2>Advance Search</h2>
+            </center>
+            <br>
+            <hr /><br><br>
             <form>
                 <label for="car-type">Car Type: </label>
                 <select id="car-type">
@@ -33,22 +37,99 @@
                 </select>
                 <label for="car-make">Car Make:</label>
                 <select id="car-make">
-                        <option></option>
-                        <option>Acura</option>
-                    </select>
+                    <option></option>
+                    <option>Acura</option>
+                </select>
                 <label for="car-year">Car Year:</label>
                 <select id="car-year">
-                        <option></option>
-                        <option>2019</option>
-                    </select>
+                    <option></option>
+                    <option>2019</option>
+                </select>
                 <label for="car-year">Car Price:</label>
-                   <input type="number" placeholder="Min Value-Max-Value"/>
+                <input type="number" placeholder="Min Value-Max-Value" />
                 <label for="seach-miles">Zip Code:</label>
-                   <input type="number" placeholder="Eg: 38655"/>
+                <input type="number" placeholder="Eg: 38655" />
             </form>
         </div>
-        <img src="img/ads-img/ads.png"/>
-
+        <img src="../img/about-imgs/car2test.png" id="car-variety" />
     </div>
+    <div class="recently-viewed">
+        <center>
+            <h1>Recent History</h1><br>
+        </center>
+        <div class="recent-rows">
+            <div class="car-cards">
+                <figure><img src="../img/cars/car1.png" alt="2016 Dodge Grand Carvana SE" />
+                    <center>
+                        <figcaption>2016 Dodge Grand Carvana SE</figcaption>
+                    </center>
+                </figure>
+                <br />
+                <div class="details-div">
+                    <span>$15,900</span>
+                    <span>102K Miles</span>
+                </div>
+            </div>
+
+            <div class="car-cards">
+                    <figure><img src="../img/cars/car8.png" alt="2018 Hyundai Accent" />
+                        <center>
+                            <figcaption>2018 Hyundai Accent</figcaption>
+                        </center>
+                    </figure>
+                    <br />
+                    <div class="details-div">
+                        <span>$16,000</span>
+                        <span>50K Miles</span>
+                    </div>
+                </div>
+
+                <div class="car-cards">
+                        <figure><img src="../img/cars/car6.png" alt="2017 Chrysler 200 LX" />
+                            <center>
+                                <figcaption>2017 Chrysler 200 LX</figcaption>
+                            </center>
+                        </figure>
+                        <br />
+                        <div class="details-div">
+                            <span>$19,999</span>
+                            <span>75K Miles</span>
+                        </div>
+
+                    </div>
+
+        </div>
+    </div>
+    <footer>
+        <div class="contact-us">
+            <center>
+                <h1>Follow Us:</h1>
+                <img class="follow-us-imgs" src="../img/icons/fb-ic.png" />
+                <img class="follow-us-imgs" src="../img/icons/instagram-ic.png" />
+                <img class="follow-us-imgs" src="../img/icons/twitter-ic.png" />
+            </center>
+        </div>
+        <div class="copyright-content">
+            <span>
+                Internet Dealers Pvt. Ltd
+                <br>
+                Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.
+                <br>
+                Oxford, MS, USA
+            </span>
+        </div>
+        <div class="news-letter-container">
+            <span>
+                <br>
+                <h2>Sign Up For NewsLetter:</h2>
+                <br>
+                <form>
+                    <input type="text" placeholder="youremail@example.com" id="email" />
+                    <input type="submit" id="subscribe-button" value="Subscribe" />
+                </form>
+            </span>
+        </div>
+    </footer>
 </body>
+
 </html>
