--- a/html/finance.html
+++ b/html/finance.html
@@ -3,81 +3,122 @@
 
 <head>
     <title>Internet-Dealers</title>
-    <link href="../css/index.css" rel="stylesheet" type="text/css" />
-    <link href="../css/finance.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul class="nav-tabs">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="inventory.html">Inventory</a></li>
-                <li><a href="finance.html">Finance</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#"><img src="../img/logo/website-logo.png" id="logo" /></a>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">
+                            <h5>Home</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="inventory.html">
+                            <h5>Inventory</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="finance.html">
+                            <h5>Finance</h5> <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">
+                            <h5>About</h5>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div class="color-filler"></div>
-        <img class="website-logo" src="../img/logo/website-logo.png" />
     </header>
-    <img class="finance-banner" src="../img/about-imgs/car-banner.png" />
-    <div class="form-wrapper">
-        <center>
-            <form class="quote-form">
+    <img class="w-100" src="../img/about-imgs/car-banner.png" />
+<div class="row">
+    <div class="col-sm-12 col-md-7 col-lg-7 mx-auto bg-dark text-light">
+        <br>
+        <form>
+            <div class="form-group text-center">
+                <label class="h4 mt-3 " for="name">Full Name</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: John Luke" />
+                <label class="h4 mt-3 " for="email">Email</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto "
+                    placeholder="email@example.com" />
+                <label class="h4 mt-3 " for="phone-number">Phone Number</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: +1 123 456 7890" />
+                <label class="h4 mt-3 " for="credit-score">Credit Score</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: 870" />
+                <label class="h4 mt-3 " for="vehicle-price">Vehicle Price</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: 12345" />
+                <label class="h4 mt-3 " for="down-payment">Down Payment</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: 12345" />
+                <label class="h4 mt-3 " for="term">Term</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: 12 months" />
+                <label class="h4 mt-3 " for="monthly-payment">Monthly Payment</label>
+                <input type="text" class="form-control w-50 my-2 mx-auto"
+                    placeholder="Eg: 1000 per month" />
+                <button type="submit" class="btn btn-primary mx-auto my-5 ">Get Quote</button>
+            </div>
 
-                <label>Full Name: </label>
-                <input class="form-input"/>
-                <label>Email Address: </label>
-                <input class="form-input" />
-                <label>Phone Number: </label>
-                <input class="form-input" />
-                <label>Credit Score: </label>
-                <input class="form-input" />
-                <label>Vehicle Price: </label>
-                <input class="form-input" />
-                <label>Down Payment: </label>
-                <input class="form-input" />
-                <label>Term: </label>
-                <input class="form-input" />
-                <label>Monthly Payment: </label>
-                <input class="form-input" />
-
-            </form>
-        </center>
-        <center><button id="get-quote-btn">Get Quote</button></center>
-
+        </form>
     </div>
 
-    <footer>
-        <div class="contact-us">
-            <center>
-                <h1>Follow Us:</h1>
-                <img class="follow-us-imgs" src="../img/icons/fb-ic.png" />
-                <img class="follow-us-imgs" src="../img/icons/instagram-ic.png" />
-                <img class="follow-us-imgs" src="../img/icons/twitter-ic.png" />
-            </center>
-        </div>
-        <div class="copyright-content">
-            <span>
-                Internet Dealers Pvt. Ltd
-                <br>
-                Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.
-                <br>
-                Oxford, MS, USA
-            </span>
-        </div>
-        <div class="news-letter-container">
-            <span>
-                <br>
-                <h2>Sign Up For NewsLetter:</h2>
-                <br>
-                <form>
-                    <input type="text" placeholder="youremail@example.com" id="email" />
-                    <input type="submit" id="subscribe-button" value="Subscribe" />
-                </form>
-            </span>
-        </div>
-    </footer>
+</div>
+<br><br>
+
+    <!--Begin of Footer-->
+    <footer class="row bg-dark text-light">
+            <div class="col-lg-4 col-sm-12 col-md-4 container-fluid">
+                <h1 class="text-center">Follow Us:</h1>
+                <div class="row ml-auto mr-auto" id="social-media">
+                    <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/fb-ic.png"/>
+                    <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/instagram-ic.png"/>
+                    <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/twitter-ic.png"/>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 container-fluid">
+                    <p class="text-center botto text-bottom">Internet Dealers Pvt. Ltd<br>
+                        Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.<br/>
+                        Oxford, MS, USA</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12container-fluid">
+                        <h3>Sign Up For NewsLetter:</h3>
+                        <form class="form-inline">
+                                <div class="form-group mb-2">
+                                  <label for="staticEmail2" class="sr-only">Email</label>
+                                  <input type="text" class="form-control mr-2" id="staticEmail2" placeholder="email@example.com">  
+                                </div>
+                                  
+                                <button type="submit" class="btn btn-primary mb-2">Sign Up</button>
+                              </form>
+                    </div>
+        </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </html>
