--- a/html/inventory.html
+++ b/html/inventory.html
@@ -3,133 +3,193 @@
 
 <head>
     <title>Internet-Dealers</title>
-    <link href="../css/index.css" rel="stylesheet" type="text/css" />
-    <link href="../css/inventory.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="../css/inventory.css" />
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul class="nav-tabs">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="inventory.html">Inventory</a></li>
-                <li><a href="finance.html">Finance</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#"><img src="../img/logo/website-logo.png" id="logo" /></a>
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">
+                            <h5>Home</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="inventory.html">
+                            <h5>Inventory</h5> <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="finance.html">
+                            <h5>Finance</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">
+                            <h5>About</h5>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div class="color-filler"></div>
-        <img class="website-logo" src="../img/logo/website-logo.png" />
     </header>
 
-    <div class="body-container">
-        <div class="advanced-search-container">
-            <br>
-            <center>
-                <h2>Advance Search</h2>
-            </center>
-            <br>
-            <hr /><br><br>
-            <form>
-                <label for="car-type">Car Type: </label>
-                <select id="car-type">
-                    <option></option>
-                    <option>Sedan</option>
-                </select>
-                <label for="car-make">Car Make:</label>
-                <select id="car-make">
-                    <option></option>
-                    <option>Acura</option>
-                </select>
-                <label for="car-year">Car Year:</label>
-                <select id="car-year">
-                    <option></option>
-                    <option>2019</option>
-                </select>
-                <label for="car-year">Car Price:</label>
-                <input type="number" placeholder="Min Value-Max-Value" />
-                <label for="seach-miles">Zip Code:</label>
-                <input type="number" placeholder="Eg: 38655" />
-            </form>
-        </div>
-        <img src="../img/about-imgs/car2test.png" id="car-variety" />
-    </div>
-    <div class="recently-viewed">
-        <center>
-            <h1>Recent History</h1><br>
-        </center>
-        <div class="recent-rows">
-            <div class="car-cards">
-                <figure><img src="../img/cars/car1.png" alt="2016 Dodge Grand Carvana SE" />
-                    <center>
-                        <figcaption>2016 Dodge Grand Carvana SE</figcaption>
-                    </center>
-                </figure>
-                <br />
-                <div class="details-div">
-                    <span>$15,900</span>
-                    <span>102K Miles</span>
-                </div>
-            </div>
+    <!--End of Header-->
 
-            <div class="car-cards">
-                    <figure><img src="../img/cars/car8.png" alt="2018 Hyundai Accent" />
-                        <center>
-                            <figcaption>2018 Hyundai Accent</figcaption>
-                        </center>
-                    </figure>
-                    <br />
-                    <div class="details-div">
-                        <span>$16,000</span>
-                        <span>50K Miles</span>
-                    </div>
-                </div>
-
-                <div class="car-cards">
-                        <figure><img src="../img/cars/car6.png" alt="2017 Chrysler 200 LX" />
-                            <center>
-                                <figcaption>2017 Chrysler 200 LX</figcaption>
-                            </center>
-                        </figure>
-                        <br />
-                        <div class="details-div">
-                            <span>$19,999</span>
-                            <span>75K Miles</span>
-                        </div>
-
-                    </div>
-
+    <!--Beginning of The body-->
+    <div class="row container-fluid mt-5">
+        <div class="col-lg-8 col-md-8 col-sm-12 mb-3">
+            <img class="image-fluid w-100" src="../img/about-imgs/car2test.png" />
         </div>
-    </div>
-    <footer>
-        <div class="contact-us">
-            <center>
-                <h1>Follow Us:</h1>
-                <img class="follow-us-imgs" src="../img/icons/fb-ic.png" />
-                <img class="follow-us-imgs" src="../img/icons/instagram-ic.png" />
-                <img class="follow-us-imgs" src="../img/icons/twitter-ic.png" />
-            </center>
-        </div>
-        <div class="copyright-content">
-            <span>
-                Internet Dealers Pvt. Ltd
-                <br>
-                Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.
-                <br>
-                Oxford, MS, USA
-            </span>
-        </div>
-        <div class="news-letter-container">
-            <span>
-                <br>
-                <h2>Sign Up For NewsLetter:</h2>
-                <br>
+        <div class="col-lg-4 col-md-4 col-sm-12 container">
+            <div class="container w-60 bg-dark text-light">
+                <h2 class="w-100 bg-primary text-center">Advance Search</h2>
                 <form>
-                    <input type="text" placeholder="youremail@example.com" id="email" />
-                    <input type="submit" id="subscribe-button" value="Subscribe" />
+                    <div class="form-group">
+                        <label class="h4 mt-3" for="carMake">Make</label>
+                        <select class="w-100 custom-select mr-sm-2 my-2">
+                            <option selected>Make</option>
+                            <option value="Audi">Adui</option>
+                            <option value="Ford">Ford</option>
+                            <option value="GMC">GMC</option>
+                        </select>
+                        <label class="h4 mt-3" for="carModel">Model</label>
+                        <select class="w-100 custom-select mr-sm-2 my-2">
+                            <option selected>Model</option>
+                            <option value="Model A">Model A</option>
+                            <option value="Model B">Model B</option>
+                            <option value="Model C">Model C</option>
+                        </select>
+                        <label class="h4 mt-3" for="carYear">Year</label>
+                        <select class="w-100 custom-select mr-sm-2 my-2">
+                            <option selected>Year</option>
+                            <option value="2019">2019</option>
+                            <option value="2018">2018</option>
+                            <option value="2017">2017</option>
+                        </select>
+                        <label class="h4 mt-3" for="carYear">Price Range</label>
+                        <div class="row">
+                            <input type="number" class="form-control mr-sm-2 my-2 mx-3 col-lg-5 col-md-3 col-sm-12"
+                                placeholder="Min-Price" />
+                            <input type="number" class="form-control mr-sm-2 my-2 mx-3 col-lg-5 col-md-3 col-sm-12"
+                                placeholder="Max-Price" />
+                        </div>
+                        <label class="h4 mt-3" for="carYear">Miles Range</label>
+                        <div class="row">
+                            <input type="number" class="form-control mr-sm-2 my-2 mx-3 col-lg-5 col-md-3 col-sm-12"
+                                placeholder="Min-Miles" />
+                            <input type="number" class="form-control mr-sm-2 my-2 mx-3 col-lg-5 col-md-3 col-sm-12"
+                                placeholder="Max-Miles" />
+                        </div>
+                    </div>
+                    <div class="form-check my-3">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Save Search</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-4">Submit</button>
                 </form>
-            </span>
+            </div>
         </div>
+    </div>
+    <hr>
+    <div class="bg-secondary">
+        <h2 class="text-center pt-4 text-light">Recent Searches</h2>
+        <div class="container row mx-auto align-items-center">
+                <div class="col-lg-4 col-md-4 col-sm-12 my-2">
+                        <div class="card" style="width:18rem;">
+                            <img src="../img/cars/car1.png" class="image-fluid card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">2016 Dodge Grand</h5>
+                                <p class="card-text">Price: $15,900<br>Miles: 102,000</p>
+                                <a href="#" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 my-2">
+                        <div class="card" style="width:18rem;">
+                            <img src="../img/cars/car2.png" class="image-fluid card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">2018 Kia Optima LX</h5>
+                                <p class="card-text">Price: $20,900<br>Miles: 60,500</p>
+                                <a href="#" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 my-2">
+                        <div class="card" style="width:18rem;">
+                            <img src="../img/cars/car3.png" class="image-fluid card-img-top" alt="">
+                            <div class="card-body">
+                                <h5 class="card-title">2016 Chevrolet Camaro LT</h5>
+                                <p class="card-text">Price: $23,998<br>Miles: 20,500</p>
+                                <a href="#" class="btn btn-primary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+    </div>
+    <br><br>
+
+<!--Begin of Footer-->
+<footer class="row bg-dark text-light">
+        <div class="col-lg-4 col-sm-12 col-md-4 container-fluid">
+            <h1 class="text-center">Follow Us:</h1>
+            <div class="row ml-auto mr-auto" id="social-media">
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/fb-ic.png"/>
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/instagram-ic.png"/>
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="../img/icons/twitter-ic.png"/>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 container-fluid">
+                <p class="text-center botto text-bottom">Internet Dealers Pvt. Ltd<br>
+                    Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.<br/>
+                    Oxford, MS, USA</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12container-fluid">
+                    <h3>Sign Up For NewsLetter:</h3>
+                    <form class="form-inline">
+                            <div class="form-group mb-2">
+                              <label for="staticEmail2" class="sr-only">Email</label>
+                              <input type="text" class="form-control mr-2" id="staticEmail2" placeholder="email@example.com">  
+                            </div>
+                              
+                            <button type="submit" class="btn btn-primary mb-2">Sign Up</button>
+                          </form>
+                </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
 </html>
