--- a/index-old.html
+++ b/index-old.html
@@ -184,30 +184,31 @@
         <div class="col-lg-4 col-sm-12 col-md-4 container-fluid">
             <h1 class="text-center">Follow Us:</h1>
             <div class="row ml-auto mr-auto" id="social-media">
-                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/fb-ic.png"/>
-                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/instagram-ic.png"/>
-                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/twitter-ic.png"/>
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/fb-ic.png" />
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/instagram-ic.png" />
+                <img class="col-lg-4 col-md-4 col-sm-1 image-fluid" src="img/icons/twitter-ic.png" />
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 container-fluid">
-                <p class="text-center botto text-bottom">Internet Dealers Pvt. Ltd<br>
-                    Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.<br/>
-                    Oxford, MS, USA</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12container-fluid">
-                    <h3>Sign Up For NewsLetter:</h3>
-                    <form class="form-inline">
-                            <div class="form-group mb-2">
-                              <label for="staticEmail2" class="sr-only">Email</label>
-                              <input type="text" class="form-control mr-2" id="staticEmail2" placeholder="email@example.com">  
-                            </div>
-                              
-                            <button type="submit" class="btn btn-primary mb-2">Sign Up</button>
-                          </form>
+            <p class="text-center botto text-bottom">Internet Dealers Pvt. Ltd<br>
+                Copyrigth (c) Internet Dealers Pvt. Ltd, All rights reserved.<br />
+                Oxford, MS, USA</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12container-fluid">
+            <h3>Sign Up For NewsLetter:</h3>
+            <form class="form-inline">
+                <div class="form-group mb-2">
+                    <label for="staticEmail2" class="sr-only">Email</label>
+                    <input type="text" class="form-control mr-2" id="staticEmail2" placeholder="email@example.com">
                 </div>
+
+                <button type="submit" class="btn btn-primary mb-2">Sign Up</button>
+            </form>
+        </div>
     </footer>
-
-
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="/__/firebase/7.16.0/firebase-app.js"></script>
+    <script src="/__/firebase/init.js"></script>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
